--- a/email1-680.html
+++ b/email1-680.html
@@ -77,7 +77,7 @@
 		.p-t-8{padding-top: 8px;}
 		.p-t-4{padding-top: 4px;}
 		.w-216{width: 216px;}
-		.logo{width: 124px; height: auto;}
+		.logo{width: 124px; height: auto; padding-left: 40px;}
 		.logo-btm{width: 55%;}
 		.zoom{width: 48px; height: 48px;}
 		.h-16{height: 16px;}
@@ -88,7 +88,7 @@
 			p{font-size: 11px;color:#FFFFFF; line-height: 1.4; font-weight: 400;}
 			.w-216{width: 130px;}
 			.p-t-8{padding-top: 4px;}
-			.logo{width: 78px; height: auto;}
+			.logo{width: 78px; height: auto; padding-left: 0px;}
 			.logo-btm{width: 55%;}
 			.zoom{width: 36px; height: 36px;}
 			.h-16{height: 8px;}
@@ -104,8 +104,8 @@
 					<v:fill type="tile" src="" color="#F5F5F7"/>
 					</v:background>
 				<![endif]-->
-				<!--[if (gte mso 9)|(IE)]><table width="680" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" bgcolor="#000000"><tr><td width="680" align="center" valign="top"><![endif]-->
-				<table class="pc-email-container" role="presentation" style="margin: 0 auto; max-width: 680px;" width="100%" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#000000">
+				<!--[if (gte mso 9)|(IE)]><table width="720" align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" bgcolor="#000000"><tr><td width="720" align="center" valign="top"><![endif]-->
+				<table class="pc-email-container" role="presentation" style="margin: 0 auto; max-width: 720px;" width="100%" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#000000">
 					<tr>
 						<td style="padding: 12px;" valign="top" align="left">
 							<table role="presentation" style="table-layout: fixed;" width="100%" cellspacing="0" cellpadding="0" border="0">
